Fix task list padding and modal project name alignment (#37)
* Initial plan

* Fix padding width and modal project alignment

- Doubled spacerCell width from 3px to 6px for more spacing between task name and due date
- Added negative left margin to modal projectcolor to align project name with other values


---------

--- a/MMM-Todoist.css
+++ b/MMM-Todoist.css
@@ -20,7 +20,7 @@
 }
 
 .spacerCell {
-    width: 3px;
+    width: 6px;
 }
 
 .todoDueOverdue {
@@ -277,6 +277,7 @@
     width: 10px;
     height: 10px;
     border-radius: 50%;
+    margin-left: -16px;
     margin-right: 6px;
     vertical-align: middle;
 }
